fix: stretch about block to available height

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,5 +1,21 @@
 .about {
+  position: relative;
+  z-index: 0;
   background: var(--background-additional-color);
+
+  @media (min-width: $laptop-width) {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 99%;
+      right: 0;
+      left: 0;
+      z-index: -1;
+      height: 10000vh;
+      background: inherit;
+      pointer-events: none;
+    }
+  }
 }
 
 .about__inner {
@@ -43,8 +59,24 @@
 }
 
 .about__development-wrapper {
+  position: relative;
+  z-index: 0;
   padding: 43px var(--edge-indent) 40px;
   background: var(--background-color);
+
+  @media (min-width: $laptop-width) {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 99%;
+      right: 0;
+      left: 0;
+      z-index: -1;
+      height: 10000vh;
+      background: inherit;
+      pointer-events: none;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     padding-bottom: 50px;
