--- a/source/sass/blocks/page-slider.scss
+++ b/source/sass/blocks/page-slider.scss
@@ -1,3 +1,7 @@
+.page-slider {
+  min-height: 100%;
+}
+
 .page-slider__list {
   padding: 0;
   margin: 0;
